<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/nav_category"
            android:title="@string/menu_category"
            android:icon="@drawable/ic_store" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/ic_user" />
        <item
            android:id="@+id/nav_upload"
            android:title="@string/menu_upload"
            android:icon="@drawable/ic_category" />
        <item
            android:id="@+id/nav_dtisrp"
            android:title="@string/menu_dtisrp"
            android:icon="@drawable/ic_dti_srp" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about"
            android:icon="@drawable/ic_about" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_login" />
    </group>
</menu>